# FreeRTOS_using_pico

./: CMakeLists.txt  README.md  main.c
freertos/: CMakeLists.txt  FreeRTOSConfig.h
